--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
 body {
     background-color: white;
 }
+
+div[data-item="button"] {
+    background-color: goldenrod;
+    padding: 3px 10px;
+    display: inline;
+}
+
+.app {
+    display: flex;
+}
+.app div {
+    background-color: red;
+    padding: 4px 10px;
+    margin: 0 10px;
+    color: white;
+    cursor: pointer;
+}
