--- a/public/styles.css
+++ b/public/styles.css
@@ -22,3 +22,9 @@ input {
     margin-bottom: 10px;
 }
 
+.registration-block {
+    padding: 20px 20px;
+    background-color: rgba(0,0,0, 0.02);
+    box-shadow: 0 0 10px 3px rgba(0,0,0, 0.2);
+    border-radius: 9px;
+}
