--- a/src/views/auth/login.html
+++ b/src/views/auth/login.html
@@ -1,8 +1,19 @@
-<div>
-    <h3>Login page</h3>
-    <div>
-        <input data-item="form__email" type="email">
-        <input data-item="form__password" type="password">
-    </div>
-    <div data-item="button">Submit</div>
+<div class="container-fluid">
+        <div class="row justify-content-center">
+            <h1>Login</h1>
+        </div>
+        <div class="row col-md-12 justify-content-center">
+            <form class="col-md-3">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input data-item="form__email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input data-item="form__password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <button data-item="button" type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
 </div>
