--- a/src/views/secondPageTemplate.html
+++ b/src/views/secondPageTemplate.html
@@ -1,5 +1,3 @@
 <div>
-    <h3>Page 2</h3>
-    <input data-item="form" type="text">
-    <div data-item="formValue" ></div>
+    <div class="cont" data-item="container"></div>
 </div>
