--- a/src/views/auth/login.html
+++ b/src/views/auth/login.html
@@ -1,19 +1,47 @@
-<div class="container-fluid">
-        <div class="row justify-content-center">
+<div class="row justify-content-center col-md-12">
+    <div class="col-md-5 block__login">
+        <div class="row col-md-12 justify-content-center">
             <h1>Login</h1>
         </div>
-        <div class="row col-md-12 justify-content-center">
-            <form class="col-md-3">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input data-item="form__email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <form class="">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input data-item="form__email"
+                       type="email"
+                       required
+                       class="form-control"
+                       id="exampleInputEmail1"
+                       aria-describedby="emailHelp"
+                       placeholder="Enter email">
+                <small id="emailHelp"
+                       class="form-text text-muted">We'll never share your email with anyone else.</small>
+                <div class="invalid-feedback">
+                    Please enter the correct email address
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input data-item="form__password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input data-item="form__password"
+                       required
+                       type="password"
+                       class="form-control"
+                       id="exampleInputPassword1"
+                       placeholder="Password">
+                <div class="invalid-feedback">
+                    Please enter your password
                 </div>
-                <button data-item="button" type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            </div>
+        </form>
+        <div class="row justify-content-end">
+            <button data-item="button" type="submit" class="btn btn-primary" style="margin-right: 15px;">Submit</button>
         </div>
+    </div>
+</div>
+<div class="row col-md-12 justify-content-center">
+    <div class="alert"
+         data-item="message-alert"
+         role="alert"
+         style="margin-top: 20px; display: none;">
+        You have been registred!
+    </div>
 </div>
