--- a/src/views/auth/registration.html
+++ b/src/views/auth/registration.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <div class="col-md-4 registration-block">
+    <div class="col-md-4 block__registration">
         <div class="row justify-content-center">
             <h2>Registration</h2>
         </div>
