--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,5 @@
+@import "./main.css";
+
 body {
     background-color: white;
 }
@@ -22,9 +24,25 @@ input {
     margin-bottom: 10px;
 }
 
-.registration-block {
+.block__registration {
     padding: 20px 20px;
     background-color: rgba(0,0,0, 0.02);
     box-shadow: 0 0 10px 3px rgba(0,0,0, 0.2);
     border-radius: 9px;
+}
+
+.block__login {
+    padding: 20px 20px;
+    background-color: rgba(0,0,0, 0.02);
+    box-shadow: 0 0 10px 3px rgba(0,0,0, 0.2);
+    border-radius: 9px;
+}
+
+
+.header {
+   margin-bottom: 50px;
+}
+
+.navbar-nav {
+    height: 100%;
 }
