--- a/src/views/auth/login.html
+++ b/src/views/auth/login.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center col-md-12">
-    <div class="col-md-5 block__login">
+    <div class="col-md-4 block__login">
         <div class="row col-md-12 justify-content-center">
             <h1>Login</h1>
         </div>
@@ -42,6 +42,6 @@
          data-item="message-alert"
          role="alert"
          style="margin-top: 20px; display: none;">
-        You have been registred!
+        You have been logged!
     </div>
 </div>
