--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,5 @@
 [data-item="cont-text"] {
-    background-color: white;
     display: inline;
     padding-left: 40px;
+    background-color: red;
 }
